# android-opencl-example

./: .clang-format  .gitignore  .gitmodules  .metadata  CMakeLists.txt  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/opencl_test/: MainActivity.kt
lib/: main.dart
src/: main.cpp
